# Backend/routes/department/department_routes.go
@@ -11,13 +11,16 @@ import (
 )
 
 func RegisterDepartmentRoutes(r *gin.Engine) {
-	// 创建存储库、服务和控制器
 	departmentRepo := repositories.NewDepartmentRepository(config.DB)
 	departmentService := services.NewDepartmentService(departmentRepo)
 	departmentController := controllers.NewDepartmentController(departmentService)
+
 	departmentRoutes := r.Group("/api/department")
 	departmentRoutes.Use(middleware.JWTAuthMiddleware())
 	{
 		departmentRoutes.GET("/", departmentController.GetAllDepartments)
+		departmentRoutes.POST("/", departmentController.CreateDepartment)
+		departmentRoutes.PUT("/:id", departmentController.UpdateDepartment)
+		departmentRoutes.DELETE("/:id", departmentController.DeleteDepartment)
 	}
 }
